add schema validation
