# public/swagger.json
@@ -53,25 +53,25 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"IUserPayload": {
+			"CreateUserInput": {
 				"properties": {
-					"firstName": {
+					"email": {
+						"type": "string"
+					},
+					"passwordConfirmation": {
+						"type": "string"
+					},
+					"password": {
 						"type": "string"
 					},
 					"lastName": {
 						"type": "string"
 					},
-					"email": {
+					"firstName": {
 						"type": "string"
 					}
 				},
-				"required": [
-					"firstName",
-					"lastName",
-					"email"
-				],
-				"type": "object",
-				"additionalProperties": false
+				"type": "object"
 			}
 		},
 		"securitySchemes": {}
@@ -156,7 +156,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/IUserPayload"
+								"$ref": "#/components/schemas/CreateUserInput"
 							}
 						}
 					}
