# src/models/user.model.ts
@@ -5,13 +5,4 @@ export class User {
     email: string;
     createdAt: Date;
     updatedAt: Date;
-
-    // constructor(args: User) {
-    //     this.id = args.id;
-    //     this.firstName = args.firstName;
-    //     this.lastName = args.lastName;
-    //     this.email = args.email;
-    //     this.createdAt = args.createdAt;
-    //     this.updatedAt = args.updatedAt;
-    // }
 }
